<resources>
    <string name="app_name">StarWarsUniverseApp</string>
    <string name="input_search_hint">Star Wars Character (e.g. Darth Vader)</string>
    <string name="search">Search</string>
    <string name="general_information">General Information</string>
    <string name="name">Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="height">Height</string>
    <string name="species">Species</string>
    <string name="species_name">Species Name</string>
    <string name="language">Language</string>
    <string name="homeworld">Homeworld</string>
    <string name="population">Population</string>
    <string name="films">Films</string>
    <string name="title">Title</string>
    <string name="released_date">Released Date</string>
    <string name="opening_crawl">Opening crawl</string>
</resources>
