<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ossama.apps.starwarsuniverseapp.viewModel.CharacterDetailsViewModel" />

    </data>

    <ScrollView
        android:background="@color/background_color"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/background_color"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:context=".view.MainActivity">

            <ImageView
                android:id="@+id/image_star_wars"
                android:layout_height="80dp"
                android:layout_width="150dp"
                android:src="@drawable/ic_star_wars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_general_info"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:text="@string/general_information"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_star_wars" />

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/card_view_general_info"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_general_info">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_name_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/name"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_name"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="Luke Skywalker" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_birth_year_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/birth_year"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_birth_year"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="19BBY" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_height_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/height"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_height"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="172" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_species"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:text="@string/species"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_general_info" />

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/card_view_species"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_species">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_species_name_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/name"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_species_name"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="Wookie" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_language_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/language"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_language"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="Shyriiwook" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_home_world"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:text="@string/homeworld"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_species" />

            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:id="@+id/card_view_home_world"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_home_world">

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_home_world_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/name"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_home_world_name"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="Tatooine" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_population_label"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/population"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_view_population"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_width="wrap_content"
                            android:textSize="18sp"
                            tools:text="120000" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_view_films"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/films"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_home_world" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_films"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_films"
                tools:listitem="@layout/item_film" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>